--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
 
-        <i class="bi bi-camera"></i>
+        <i class=""></i>
         <h1 class="sitename">O.S. Alvenaria</h1>
       </a>
 
@@ -311,8 +311,8 @@
         <p>© <span>Copyright</span> <strong class="px-1 sitename">HULUNE</strong> <span>Todos os Direitos Reservados</span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61566599551247"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/santos.alvenaria?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="bi bi-instagram"></i></a>
     
 
   </footer>
