--- a/services.html
+++ b/services.html
@@ -41,6 +41,7 @@
           <li><a href="services.html" class="active">Serviços</a></li>
           <li><a href="contact.html">Contatos</a></li>
           <li><a href="login.php">Login</a></li>
+          <li><a href="cadastro.html" target="_blank">Cadastro</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
