--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,8 @@
           <li><a href="index.html">Home<br></a></li>
           <li><a href="services.html">Serviços</a></li>
           <li><a href="contact.html" class="active">Contatos</a></li>
-          <li><a href="login.php">Login</a></li>
+          <li><a href="login.php" target="_blank">Login</a></li>
+          <li><a href="cadastro.html" target="_blank">Cadastro</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
