--- a/cadastro.html
+++ b/cadastro.html
@@ -32,10 +32,11 @@
     
           <nav id="navmenu" class="navmenu">
             <ul>
-              <li><a href="index.html" class="active">Home<br></a></li>
+              <li><a href="index.html">Home<br></a></li>
               <li><a href="services.html">Serviços</a></li>
               <li><a href="contact.html">Contatos</a></li>
               <li><a href="login.php">Login</a></li>
+              <li><a href="cadastro.html" class="active">Cadastro</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
           </nav>
