--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">HULUNE</strong> <span>Todos Direitos Reservados</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">HULUNE</strong> <span>Todos os Direitos Reservados</span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.facebook.com/profile.php?id=61566599551247"><i class="bi bi-facebook"></i></a>
